# Calculator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ROADMAP.md
resources/: calculator.qrc
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/engine/: CalculatorEngine.cpp  CalculatorEngine.h
src/ui/: ButtonGrid.cpp  ButtonGrid.h  Display.cpp  Display.h
src/utils/: Types.h
tests/: CMakeLists.txt
